add groups list

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Logo -->
 			<div class="col-xs-8">
-				<h1>Сервіс обліку студентів</h1>
+				<h1>Сервіс Обліку Студентів</h1>
 			</div>
 			<!-- Groups Selector -->
 			<div class="col-xs-4" id="group-selector">
@@ -40,9 +40,9 @@
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" class="active"><a href="#">Студенти</a></li>
-					<li role="presentation"><a href="#">Відвідування</a></li>
-					<li role="presentation"><a href="#">Групи</a></li>
+					<li role="presentation" class="active"><a href="./index.html">Студенти</a></li>
+					<li role="presentation"><a href="./invitation.html">Відвідування</a></li>
+					<li role="presentation"><a href="./groups.html">Групи</a></li>
 				</ul>
 			</div>
 
@@ -55,7 +55,6 @@
 				<!-- Status Message -->
 				<div class="alert alert-warning">Зміни скасовано</div>
 				<h2>База Студентів - <a href="#" class="btn btn-primary">Додати Студента</a></h2>
-				<!-- Add Student Button -->
 
 				<!-- Start Students Listing -->
 				<table class="table table-hover table-striped">
